log
Thu 20 Apr 2023 10:20:15 PM UTC: 
 tests:  1|8
total_score: 0/70
1d4e872
Thu 20 Apr 2023 10:25:46 PM UTC: 
 treemap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
a382c63
Thu 20 Apr 2023 10:26:03 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
07f1ba8
Thu 20 Apr 2023 10:29:23 PM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:78:9: error: too few arguments to function ‘is_equal’
   78 |     if (is_equal(tree->current->pair->key, key)){
      |         ^~~~~~~~
treemap.c:22:5: note: declared here
   22 | int is_equal(TreeMap* tree, void* key1, void* key2){
      |     ^~~~~~~~
Compilation failed
7d2921c
Thu 20 Apr 2023 10:29:59 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
a715fec
Thu 20 Apr 2023 10:38:28 PM UTC: 
 treemap.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
ca7e0a5
Fri 21 Apr 2023 10:32:24 PM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:51:13: error: unused variable ‘currentAux’ [-Werror=unused-variable]
   51 |   TreeNode *currentAux = tree->root;
      |             ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
87fa1f7
Fri 21 Apr 2023 10:36:48 PM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
31531f7
Fri 21 Apr 2023 10:43:24 PM UTC: 
 treemap.c | 28 +++++++++++++++++++++++++---
 1 file changed, 25 insertions(+), 3 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:61:26: error: ‘kew’ undeclared (first use in this function); did you mean ‘key’?
   61 |     if (tree->lower_than(kew, current->pair->key)){
      |                          ^~~
      |                          key
treemap.c:61:26: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
3969111
Fri 21 Apr 2023 10:43:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
78bdc02
Fri 21 Apr 2023 10:45:05 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
74220c7
Fri 21 Apr 2023 10:50:18 PM UTC: 
 treemap.c | 39 +++++++++++++++++++++++----------------
 1 file changed, 23 insertions(+), 16 deletions(-)
 tests:  13|5
total_score: 25/70
9664b94
Fri 21 Apr 2023 10:53:05 PM UTC: 
 treemap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  13|5
total_score: 25/70
eca0484
Fri 21 Apr 2023 10:55:49 PM UTC: 
 treemap.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  15|4
total_score: 25/70
3a4859a
Fri 21 Apr 2023 10:57:01 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  15|4
total_score: 25/70
d1f344e
Fri 21 Apr 2023 10:59:10 PM UTC: 
 treemap.c | 49 ++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 42 insertions(+), 7 deletions(-)
 tests:  18|3
total_score: 40/70
95826eb
Fri 21 Apr 2023 11:00:02 PM UTC: 
 treemap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  18|3
total_score: 40/70
a63e796
Mon 24 Apr 2023 03:36:43 AM UTC: 
 treemap.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  20|2
total_score: 45/70
b7953ea
Mon 24 Apr 2023 03:39:26 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘nextTreeMap’:
treemap.c:183:5: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  183 |     if (tree->current == NULL)
      |     ^~
treemap.c:185:9: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  185 |         while (tree->current->left != NULL) {
      |         ^~~~~
treemap.c: At top level:
treemap.c:188:7: error: expected identifier or ‘(’ before ‘else’
  188 |     } else if (tree->current->right != NULL) {
      |       ^~~~
treemap.c:193:7: error: expected identifier or ‘(’ before ‘else’
  193 |     } else {
      |       ^~~~
treemap.c:202:5: error: expected identifier or ‘(’ before ‘if’
  202 |     if (tree->current == NULL) return NULL;
      |     ^~
treemap.c:203:5: error: expected identifier or ‘(’ before ‘return’
  203 |     return tree->current->pair;
      |     ^~~~~~
treemap.c:204:1: error: expected identifier or ‘(’ before ‘}’ token
  204 | }
      | ^
treemap.c: In function ‘nextTreeMap’:
treemap.c:188:5: error: control reaches end of non-void function [-Werror=return-type]
  188 |     } else if (tree->current->right != NULL) {
      |     ^
cc1: all warnings being treated as errors
Compilation failed
3f60fa4
